--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ga-client-react",
+  "name": "ga-client-react-leaflet",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.14",
     "@types/leaflet-draw": "^1.0.11",
     "axios": "^1.7.2",
     "leaflet": "^1.9.4",
