--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules
 node_modules
+
+# Build output
 dist
 dist-ssr
+
+# Environment
+.env
 *.local
 
 # Editor directories and files
