--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "check": "pnpm run lint && pnpm run format"
   },
   "dependencies": {
     "@types/geojson": "^7946.0.14",
     "@types/leaflet-draw": "^1.0.11",
+    "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "react": "^18.3.1",
@@ -20,20 +24,22 @@
     "react-leaflet-draw": "^0.20.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/leaflet": "^1.9.14",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
     "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.4.11"
   }
 }
