--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-VITE_API_URL=your_api_url # For example: http://localhost
-VITE_API_PORT=your_api_port # For example: 3000
-VITE_API_VERSION=your_api_version # For example: v1
+VITE_API_URL=your_api_url # For example: http://localhost/v1
