fix(ci): add missing permissions

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,12 @@ on:
       - "main"
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: write
+  packages: write
+  attestations: write
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
