--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,10 +54,11 @@ jobs:
           format: "cyclonedx-json"
           output-file: "sbom.cyclonedx.json"
 
-      - name: Attest
-        uses: actions/attest-sbom@v3
-        id: attest
-        with:
-          subject-name: ghcr.io/${{ github.repository }}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          sbom-path: "sbom.cyclonedx.json"
+      # Deactivated because it is currently not supported by the gh licensing for this repository
+      # - name: Attest
+      #   uses: actions/attest-sbom@v3
+      #   id: attest
+      #   with:
+      #     subject-name: ghcr.io/${{ github.repository }}
+      #     subject-digest: ${{ steps.push.outputs.digest }}
+      #     sbom-path: "sbom.cyclonedx.json"
