--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 8081;
     server_name ga-client-server;
-    port_in_redirect on; # Enable port in redirects for local dev; disable behind reverse proxy.
+    port_in_redirect off;
 
     location /ga-client/ {
         root /usr/share/nginx/html;
@@ -11,5 +11,5 @@ server {
 
     location = /ga-client {
         return 301 /ga-client/;
-}
+    }
 }
